Fixing too big logo. Attempt #2.

--- a/style.css
+++ b/style.css
@@ -70,11 +70,6 @@ footer {
 	color: #888;
 }
 
-footer img {
-	width: 14px;
-	height: 14px;
-}
-
 a {
 	color: #4CAF50;
 	text-decoration: none;
